--- a/css/style.css
+++ b/css/style.css
@@ -83,11 +83,11 @@ ul {
   animation: none;
 }
 @keyframes blink {
-  0%  { background-color: #ccc; }
-  49% { background-color: #ccc; }
+  0%  { background-color: rgb(255, 255, 255); }
+  49% { background-color: rgb(255, 255, 255); }
   50% { background-color: transparent; }
   99% { background-color: transparent; }
-  100%  { background-color: #ccc; }
+  100%  { background-color: rgb(255, 255, 255); }
 }
 
 html {
@@ -95,10 +95,11 @@ html {
 }
 
 #about {
-    height: 75vh;
+    height: 100vh;
     width: 100%;
     display: inline-block;
     background-color: rgb(255, 255, 255);
+    padding-bottom: 500px;
 }
 
 #about h1 {
@@ -109,12 +110,16 @@ html {
 
 #about p {
     text-align: center;
-    font-size: 5vh;
+    font-size: 4vh;
     color: rgb(0, 0, 0);
 }
 
+#para-3 {
+    padding-bottom: 10vh;
+}
+
 #projects {
-        height: 100h;
+        height: 100%;
         width: 100%;
         display: inline-block;
         background-color: rgb(255, 255, 255);
@@ -189,7 +194,7 @@ html {
   height: 15px;
   width: 15px;
   margin: 0 2px;
-  background-color: #bbb;
+  background-color: rgb(255, 255, 255);
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
@@ -213,7 +218,7 @@ html {
 }
 
 #contact {
-        height: 75vh;
+        height: 100vh;
         width: 100%;
         display: inline-block;
         background-color: rgb(255, 255, 255);
