--- a/css/style.css
+++ b/css/style.css
@@ -222,6 +222,11 @@ html {
         width: 100%;
         display: inline-block;
         background-color: rgb(255, 255, 255);
+        display :flex;
+        justify-content: center; 
+        align-items: center; 
+        flex-direction: column}
+
 }
 
 #contact h1 {
