--- a/css/style.css
+++ b/css/style.css
@@ -139,7 +139,7 @@ html {
 .slideshow-container {
   padding-top: 50px;
   padding-bottom: 50px;
-  max-width: 50%;
+  max-width: 80%;
   position: relative;
   margin: auto;
 }
@@ -226,8 +226,7 @@ html {
         display :flex;
         justify-content: center; 
         align-items: center; 
-        flex-direction: column}
-
+        flex-direction: column
 }
 
 #contact h1 {
