--- a/css/style.css
+++ b/css/style.css
@@ -153,13 +153,13 @@ html {
   position: absolute;
   top: 50%;
   width: auto;
-  
   color: rgb(255, 255, 255);
   font-weight: bold;
   font-size: 18px;
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
   user-select: none;
+  padding: 24px;
 }
 
 .next {
@@ -174,7 +174,6 @@ html {
 .text {
   color: #f2f2f2;
   font-size: 15px;
-  
   position: absolute;
   bottom: 8px;
   width: 100%;
@@ -255,7 +254,6 @@ html {
 #copyright p {
     font-size: 3vh;
 }
-
 
 
   
